--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kubernetes in Action Demo Application v0.1</title>
+    <title>Kubernetes in Action Demo Application v0.3</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
@@ -12,6 +12,7 @@
 <div id="content">
     <div class="bubble">
         <p>Kiada version {{version}}. Request processed by <b>{{hostname}}</b>. Client IP: <b>{{clientIP}}</b></p>
+        <p>{{statusMessage}}</p>
     </div>
 </div>
 
